# simple-tg-md

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
