[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-tg-md"
version = "0.1.0"
description = "Простая библиотека для конвертирования в формат Telegram Markdown V2"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}

[project.urls]
"Homepage" = "https://github.com/VKolebcev/simple-tg-md"
"Bug Tracker" = "https://github.com/VKolebcev/simple-tg-md/issues"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"